--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "rdash-angular",
+  "name": "beacon-of-beacons-client",
   "version": "0.0.1",
   "author": "Elliot Hesp",
   "contributors": [
     "Leonel Samayoa <leonel.e.samayoa@gmail.com> (http://gobliip.com)",
-    "Ricardo Pascua <rdpascua@outlook.com>"
+    "Ricardo Pascua <rdpascua@outlook.com>", 
+    "Santina Lin <santina424@gmail.com>"
   ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mcupak/beacon-of-beacons-client.git"
+  }, 
   "devDependencies": {
     "bower": "^1.3.9",
     "gulp": "~3.8.0",
