--- a/bower.json
+++ b/bower.json
@@ -22,13 +22,14 @@
   "dependencies": {
     "rdash-ui": "1.0.*",
     "lodash": "3.10.0",
-    "angular": "~1.2.21",
+    "angular": "~1.4.2",
     "angular-cookies": "~1.2.21",
     "angular-bootstrap": "~0.11.0",
     "angular-ui-router": "^0.2.10",
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.3.0",
-    "bootstrap-select": "~1.7.2"
+    "bootstrap-select": "~1.7.2",
+    "angular-material": "~0.10.0"
   },
   "repository": {
     "type": "git",
