--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "rdash-ui": "1.0.*",
+    "lodash": "3.10.0",
     "angular": "~1.2.21",
     "angular-cookies": "~1.2.21",
     "angular-bootstrap": "~0.11.0",
