--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "bootstrap": "~3.2.0",
     "font-awesome": "~4.3.0",
     "bootstrap-select": "~1.7.2",
-    "angular-material": "0.9.4"
+    "angular-material": "0.9.4",
+    "angular-resource": "~1.4.3"
   },
   "repository": {
     "type": "git",
